# CONVERGENT-1

./: .gitattributes  .gitignore  ARCHITECTURE.md  BACKLOG_V2.md  CHANGELOG.md  CLAUDE.md  LICENSE  OPEN_QUESTIONS.md  PROGRESS.md  README.md  SECURITY.md  pyproject.toml
__strategy_library/: LIBRARY_SIGNOFF.md
__strategy_library/_audit/: cross_check_2026-04-18.jsonl  cross_check_summary.md
__strategy_library/_staging/: CATEGORY_DECISIONS_SIGNOFF.md
__strategy_library/subcategories/: ACCOUNTING_METHODS.yaml  ACCOUNTING_METHODS_SIGNOFF.md  APPORTIONMENT_AND_SOURCING.yaml  APPORTIONMENT_AND_SOURCING_SIGNOFF.md  CALIFORNIA_SPECIFIC.yaml  CALIFORNIA_SPECIFIC_SIGNOFF.md  CAPITAL_GAINS_LOSSES.yaml  CAPITAL_GAINS_LOSSES_SIGNOFF.md  CHARITABLE.yaml  CHARITABLE_SIGNOFF.md  COMPENSATION.yaml  COMPENSATION_SIGNOFF.md  COMPLIANCE_AND_PROCEDURAL.yaml  COMPLIANCE_AND_PROCEDURAL_EVALUATORS_SIGNOFF.md  COMPLIANCE_AND_PROCEDURAL_SIGNOFF.md  CREDITS.yaml  CREDITS_SIGNOFF.md  C_CORP_SPECIAL_ISSUES.yaml  C_CORP_SPECIAL_ISSUES_SIGNOFF.md  DEBT_RECAPITALIZATION.yaml  DEBT_RECAPITALIZATION_SIGNOFF.md  ENTITY_SELECTION.yaml  ENTITY_SELECTION_SIGNOFF.md  ESTATE_GIFT_GST.yaml  ESTATE_GIFT_GST_SIGNOFF.md  EXECUTIVE_COMP_AND_EQUITY.yaml  EXECUTIVE_COMP_AND_EQUITY_SIGNOFF.md  FAMILY_OFFICE_INVESTMENT_STRUCTURES.yaml  FAMILY_OFFICE_INVESTMENT_STRUCTURES_SIGNOFF.md  FARM_RANCH_AG.yaml  FARM_RANCH_AG_SIGNOFF.md  INSTALLMENT_AND_DEFERRED_SALES.yaml  INSTALLMENT_AND_DEFERRED_SALES_SIGNOFF.md  INSURANCE_RISK_TRANSFER.yaml  INSURANCE_RISK_TRANSFER_SIGNOFF.md  INTERNATIONAL_INBOUND.yaml  INTERNATIONAL_INBOUND_SIGNOFF.md  INTERNATIONAL_OUTBOUND.yaml  INTERNATIONAL_OUTBOUND_SIGNOFF.md  LOSS_LIMIT_NAVIGATION.yaml  (+43 more)
app/: __init__.py
app/config/: __init__.py  authorities.py  forms.py  prompts.py  router.py  rules.py  validate.py
app/cross_check/: __init__.py  __main__.py  audit.py  merge.py  null_detection.py  runner.py
app/evaluators/: MVP_50_SIGNOFF.md  MVP_PATTERN_SIGNOFF.md  __init__.py  _base.py  _registry.py
app/scenario/: SCHEMA_SIGNOFF.md  __init__.py  loader.py  models.py  schema.yaml  validators.py
authority_layer/: pitfalls.yaml
config/: CONFIG_ARCHITECTURE_SIGNOFF.md  VERSION.yaml  models.yaml
config/prompts/: cross_check_subcategory.j2
convergent/: __init__.py  __main__.py  config.py
convergent/authority_layer/: __init__.py  api.py  citation_verifier.py  pii_sanitizer.py
convergent/persistence/: __init__.py  authority_cache_db.py  engagement_db.py  export_cvg.py  rules_cache_db.py  sqlcipher_key.py
convergent/util/: decimal_tax.py  logging.py
docs/: PROMPT_V3.md  REPO_LAYOUT.md  decisions.md
docs/decisions/: 0001-phase0-scope.md  0002-rules-cache-bootstrap-sources.md  (+8 more)
installer/: README.md  convergent.iss  pyinstaller.spec
rules_cache_bootstrap/: README.md  _SIGNOFF_TEMPLATE.md  listed_transactions.yaml  obbba_notices.yaml  reportable_transactions.yaml  review_checklist.md
scripts/: build_installer.ps1
strategy_library/: MANIFEST.yaml  README.md
tests/: conftest.py
(+263 files in other folders)
